# tictactoe

./: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  README.md
.github/workflows/: CI.yml
qml/: Board.qml  Cell.qml  main.qml  qml.qrc
resources/: resources.qrc
scripts/: clang-format.sh  clang-tidy.sh
src/: Board.qml  CMakeLists.txt  Cell.qml  Game.cpp  Game.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp  main.qml  qml.qrc
tests/: CMakeLists.txt  main.cpp  matchDecision3x3.cpp
tests/gameFinished/: CMakeLists.txt  gameFinished.cpp
tests/matchDecision3x3/: CMakeLists.txt  matchDecision3x3.cpp
